test/Fail/Issue1303.err
Issue1303.agda:10.1-21.8: error: [DeBruijnIndexOutOfScope]
de Bruijn index 1 is not in scope in the context (dot₁ : _)
